--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>AlarmPi</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>AlarmPi</title>
 </head>
 <body>
-    <h1>AlarmPi</h1>
-<script src="/socket.io/socket.io.js"></script>
-<script>
-'use strict'
-;(() => {
-  
-  const socket = io()
-  socket.on('GPIOChange', (msg) => {
-    console.log(msg)
-  })
+  <h1>AlarmPi</h1>
+  <input type="text" class="setKeyInput" placeholder="Auth Key" value="">
+  <button type="button" class="setKeyBtn">Save Auth Key</button>
 
-})()
-</script>
+  <h2>Actions</h2>
+  <h3>Toggles</h3>
+
+  <button type="button" class="triggerGate">Trigger Gate</button>
+  <button type="button" class="triggerDoor">Trigger Door</button>
+  
+  <h2>Status</h2>
+  <dl>
+    <dt>Magnetic Sensor</dt>
+    <dd class="magneticSensor"></dd>
+
+    <dt>Proximity Sensor</dt>
+    <dd class="proximitySensor"></dd>
+
+    <dt>Intercom Button</dt>
+    <dd class="intercomButton"></dd>
+  </dl>
+
+  <div class="datePing"></div>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
