Change project structure, improve JWT, migrate to Babel

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,9 @@
   <h1>AlarmPi</h1>
   <input type="text" class="setKeyInput" placeholder="Auth Key" value="">
   <button type="button" class="setKeyBtn">Save Auth Key</button>
+  <br>
+  <input type="text" class="setSecretInput" placeholder="Auth Secret" value="">
+  <button type="button" class="setSecretBtn">Save Auth Secret</button>
 
   <h2>Actions</h2>
   <h3>Toggles</h3>
