--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AlarmPi</title>
+  <title>Pupper</title>
 </head>
 <body>
-  <h1>AlarmPi</h1>
+  <h1>Pupper</h1>
   <input type="text" class="setKeyInput" placeholder="Auth Key" value="">
   <button type="button" class="setKeyBtn">Save Auth Key</button>
   <br>
